Fix line heights so content isn't so cramped vertically

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,5 @@
 p {
     font-family: "Heebo-Regular", sans-serif;
-    margin: 5px 0;
     width: fit-content;
     font-size: 14px;
 }
@@ -57,7 +56,6 @@ p {
 }
 
 .social-label > .square {
-    border-radius: 2px;
     width: 15px;
 }
 
@@ -128,7 +126,7 @@ p {
 
 .server > p{
     font-size: 10px;
-    margin: 3px 0;
+    line-height: 14px;
     color: rgba(0,0,0,0.3);
 }
 
