--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
 
 p{
     font-family: Heebo-Regular, sans-serif;
+    line-height: 20px;
 }
 
 h2 {
